DOC-2215: updating with new {{prefix}}mce-clipboard{{suffix}} tags for antora to render correctly in live-demos.

--- a/modules/ROOT/examples/live-demos/advtemplate-mce-clipboard/index.html
+++ b/modules/ROOT/examples/live-demos/advtemplate-mce-clipboard/index.html
@@ -1,5 +1,5 @@
 <textarea id="advanced-template-mce-clipboard">
-  <h3>Using the {{mce-clipboard}} Marker with Advanced Templates</h3>
+  <h3>Using the {{prefix}}mce-clipboard{{suffix}} Marker with Advanced Templates</h3>
   <h4>Before inserting the example template, <strong>type in your name</strong> to the editor, select and copy it to your clipboard by using <strong>Ctrl+C</strong> for Windows users, or <strong>⌘+C</strong> for Mac users</h4>
   <div>
     <ol>
@@ -10,12 +10,12 @@
         Select a template to add to the TinyMCE document from the <strong>Templates</strong> dialog that presents.
         <ol>
           <li>
-            <p>Click the <strong>without an <code>{{mce-clipboard}}</code> marker</strong> marker.</p>
+            <p>Click the <strong>without an <code>{{prefix}}mce-clipboard{{suffix}}</code> marker</strong> marker.</p>
             <p>The template should be inserted into the editor content regardless of any clipboard content./p>
           </li>
           <li>
-            <p>Click the <strong>with a <code>{{mce-clipboard}}</code> marker.</strong></p>
-            <p><em>when a template <strong>does</strong> contain a valid {{mce-clipboard}} marker, the current content saved in the users clipboard will <strong>replace</strong> the marker when the user inserts the template.</em></p>
+            <p>Click the <strong>with a <code>{{prefix}}mce-clipboard{{suffix}}</code> marker.</strong></p>
+            <p><em>when a template <strong>does</strong> contain a valid {{prefix}}mce-clipboard{{suffix}} marker, the current content saved in the users clipboard will <strong>replace</strong> the marker when the user inserts the template.</em></p>
           </li>
         </ol>
       </li>
