--- a/modules/ROOT/examples/live-demos/advtemplate-mce-clipboard/index.html
+++ b/modules/ROOT/examples/live-demos/advtemplate-mce-clipboard/index.html
@@ -10,7 +10,7 @@
         Select a template to add to the TinyMCE document from the <strong>Templates</strong> dialog that presents.
         <ol>
           <li>
-            <p>Click the <strong>without an <code>{{prefix}}mce-clipboard{{suffix}}</code> marker</strong> marker.</p>
+            <p>Click the <strong>Without an <code>{{prefix}}mce-clipboard{{suffix}}</code> marker</strong> template.</p>
             <p>The template should be inserted into the editor content regardless of any clipboard content./p>
           </li>
           <li>
