--- a/modules/ROOT/examples/live-demos/advtemplate-mce-clipboard/index.html
+++ b/modules/ROOT/examples/live-demos/advtemplate-mce-clipboard/index.html
@@ -14,7 +14,7 @@
             <p>The template should be inserted into the editor content regardless of any clipboard content./p>
           </li>
           <li>
-            <p>Click the <strong>with a <code>{{prefix}}mce-clipboard{{suffix}}</code> marker.</strong></p>
+            <p>Click the <strong>With a <code>{{prefix}}mce-clipboard{{suffix}}</code> marker</strong> template.</p>
             <p><em>when a template <strong>does</strong> contain a valid {{prefix}}mce-clipboard{{suffix}} marker, the current content saved in the users clipboard will <strong>replace</strong> the marker when the user inserts the template.</em></p>
           </li>
         </ol>
