improve noneditable-regexp demo

--- a/modules/ROOT/examples/live-demos/noneditable-regexp/index.html
+++ b/modules/ROOT/examples/live-demos/noneditable-regexp/index.html
@@ -1,21 +1,21 @@
 <textarea id="noneditable-regexp">
   Editable numbers div example
-  <div class="myclass">123456789</div>
+  <div class="myclass green">123456789</div>
 
   <hr>
   
   Non-editable numbers div example
-  <div class="myclass">123-456-789</div>
+  <div class="myclass red">123-456-789</div>
 
   <hr>
   
   Non-editable numbers div example
-  <div class="myclass">111-222-333</div>
+  <div class="myclass red">111-222-333</div>
 
   <hr>
   
   Non-editable apikey div example
-  <div class="myclass">apikey</div>
+  <div class="myclass red">sometext apikeyyyy</div>
 
   <hr>
 
