fix demo toolbar

--- a/modules/ROOT/examples/live-demos/getusers-api-alternative/index.html
+++ b/modules/ROOT/examples/live-demos/getusers-api-alternative/index.html
@@ -1,5 +1,5 @@
 <textarea id="getusers-api-alternative">
-<p>Existing at mention: <span class="mention" data-mce-mentions-id="user-3">@Abraham Lincoln</span></p>
+<p>Existing at mention: <span class="mention" data-mce-mentions-id="user-3">@Alice Smith</span></p>
 <p>Add some more at mentions here to track them. Click the <strong>getUsers</strong> button in the toolbar to add a list of currently inserted users to the editor.</p>
 
 <br><br><br>
