DOC-2300: Replace Spell Checker Pro to Spell Checker in 7x docs project.

--- a/modules/ROOT/examples/live-demos/spellchecker/index.html
+++ b/modules/ROOT/examples/live-demos/spellchecker/index.html
@@ -1,4 +1,4 @@
-<textarea id="spellcheckerpro">
+<textarea id="spellchecker">
   <h1><span lang="en">The Hare and the Tortoise</span></h1>
   <p><span lang="en">A HARE one day riddiculed the short feet and slow pace of the Tortoise, who replied, laughing: &ldquo;Though you be swift as the wind, I will beeat you in a race.&rdquo; The Hare, beleiving her assertion to be simply impossable, assented to the proposal; and they agreed that the Fox should choose the course and fix the gaol. On the day appointed for the race the two started together. The Tortoise never for a momment stopped, but went on with a slow but steady pace straight to the end of the corse. The Hare, lying down by the wayside, fell fast asleep. At last waking up, and moving as fast as he could, he saw the Tortoise had reached the goal, and was comfortably dozzing after her fatigue.</span></p>
   <p><span lang="en">Slow but steady wins the race.</span></p>
