DOC-2300: Replace/rename Advanced Templates with Template in TinyMCE 7x docs.

--- a/modules/ROOT/examples/live-demos/advtemplate-insertionpoint/index.html
+++ b/modules/ROOT/examples/live-demos/advtemplate-insertionpoint/index.html
@@ -1,5 +1,5 @@
-<textarea id="advanced-template-insertionpoint">
-<h3>Using the Insertion Point Marker with Advanced Templates (and Merge Tags)<h3>
+<textarea id="template-insertionpoint">
+<h3>Using the Insertion Point Marker with Templates (and Merge Tags)<h3>
 
 <h4>To insert a template</h4>
  <ol>
@@ -37,10 +37,10 @@
 
 <p>The fixed string that is the Insertion Point Marker uses the same delimiting characters as are used by default by the Merge Tags plugin.</p>
 
-<p>The <strong>Merge Tags</strong> plugin knows nothing about the <code>{{prefix}}mce-cursor{{suffix}}</code> being a marker string for the <strong>Advanced Templates</strong> plugin. And, if this particular string was used in a Merge Tags configuration, the <strong>Merge Tags</strong> plugin would recognise it and substitute it with whatever contents it was set to substitute, as expected.
+<p>The <strong>Merge Tags</strong> plugin knows nothing about the <code>{{prefix}}mce-cursor{{suffix}}</code> being a marker string for the <strong>Templates</strong> plugin. And, if this particular string was used in a Merge Tags configuration, the <strong>Merge Tags</strong> plugin would recognise it and substitute it with whatever contents it was set to substitute, as expected.
 
-<p>The <strong>Advanced Templates</strong> plugin removes the Insertion Point Marker before inserting a template containing the string in to a TinyMCE instance, however.</p>
+<p>The <strong>Templates</strong> plugin removes the Insertion Point Marker before inserting a template containing the string in to a TinyMCE instance, however.</p>
 
-<p>Consequently the <strong>Advanced Templates</strong> insertion point marker string is never seen by the <strong>Merge Tags</strong> plugin.</p>
+<p>Consequently the <strong>Templates</strong> insertion point marker string is never seen by the <strong>Merge Tags</strong> plugin.</p>
 
 </textarea>
