--- a/modules/ROOT/examples/live-demos/advtemplate-mce-clipboard/index.html
+++ b/modules/ROOT/examples/live-demos/advtemplate-mce-clipboard/index.html
@@ -1,5 +1,5 @@
-<textarea id="advanced-template-mce-clipboard">
-  <h3>Using the {{prefix}}mce-clipboard{{suffix}} Marker with Advanced Templates</h3>
+<textarea id="template-mce-clipboard">
+  <h3>Using the {{prefix}}mce-clipboard{{suffix}} Marker with Templates</h3>
   <h4>Before inserting the example template, <strong>type in your name</strong> to the editor, select and copy it to your clipboard by using <strong>Ctrl+C</strong> for Windows users, or <strong>⌘+C</strong> for Mac users</h4>
   <div>
     <ol>
