--- a/modules/ROOT/examples/live-demos/advtemplate-predefined/index.html
+++ b/modules/ROOT/examples/live-demos/advtemplate-predefined/index.html
@@ -1,4 +1,4 @@
-<textarea id="advanced-template-predefined">
+<textarea id="template-predefined">
   <h3>Inserting a template</h3>
   <p>To insert a template:</p>
   <ol>
