DOC-2300: Replace Advanced Code Editor with Enhanced Code Editor in 7x docs.

--- a/modules/ROOT/examples/live-demos/advcode/index.html
+++ b/modules/ROOT/examples/live-demos/advcode/index.html
@@ -2,7 +2,7 @@
   <thead>
     <tr>
       <th style="width: 50%;"><h2>The Code Plugin</h2></th>
-      <th style="width: 50%;"><h2>The Advanced Code Editor Plugin</h2></th>
+      <th style="width: 50%;"><h2>The Enhanced Code Editor Plugin</h2></th>
     </tr>
   </thead>
   <tbody>
@@ -20,7 +20,7 @@
       </td>
       <td style="width: 50%;">
         <textarea class="advcodedemo">
-          <p>The Advanced Code Editor (<code>advcode</code>) plugin provides the same dialog as the code (<code>code</code>) plugin, but with the following additional features:</p>
+          <p>The Enhanced Code Editor (<code>advcode</code>) plugin provides the same dialog as the code (<code>code</code>) plugin, but with the following additional features:</p>
           <ul>
             <li>Syntax highlighting.</li>
             <li>Element matching and closing.</li>
@@ -31,8 +31,8 @@
             <li>Increase and decrease display font size.</li>
             <li>Full-screen mode.</li>
           </ul>
-          <p>For the Advanced Code Editor to offer a full-screen mode requires the <a href="https://tiny.cloud/docs/tinymce/6/fullscreen">Full screen</a> plugin and requires the Advanced Code Editor to be running in <a href="https://tiny.cloud/docs/tinymce/6/advcode/#advcode_inline">inline mode</a>.</p>
-          <p>To open the Advanced Code Editor dialog:</p>
+          <p>For the Enhanced Code Editor to offer a full-screen mode requires the <a href="https://tiny.cloud/docs/tinymce/6/fullscreen">Full screen</a> plugin and requires the Enhanced Code Editor to be running in <a href="https://tiny.cloud/docs/tinymce/6/advcode/#advcode_inline">inline mode</a>.</p>
+          <p>To open the Enhanced Code Editor dialog:</p>
           <ul>
             <li>On the menu bar, open <strong>View</strong> &gt; <strong>Source code</strong>.</li>
             <li>On the menu bar, open <strong>Tools</strong> &gt; <strong>Source code</strong>.</li>
