DOC-2300: rename enhanced image editing with image editing for tinymce 7.0.

--- a/modules/ROOT/examples/live-demos/edit-image/index.html
+++ b/modules/ROOT/examples/live-demos/edit-image/index.html
@@ -2,7 +2,7 @@
   {{logofordemoshtml}}
   <h2 style="text-align: center;">Welcome to the TinyMCE editor demo!</h2>
   <h2><img style="float: right; padding: 0 0 10px 10px;" title="Tiny Husky" src="//www.tiny.cloud/docs/images/tiny-husky.jpg" alt="Tiny Husky" height="320" width="304" /></h2>
-  <h2>Enhanced Image Editing Plugin feature<br>Click on the image to get started</h2>
+  <h2>Image Editing Plugin feature<br>Click on the image to get started</h2>
 
   <h2>Got questions or need help?</h2>
 
