--- a/modules/ROOT/examples/live-demos/exportpdf/index.html
+++ b/modules/ROOT/examples/live-demos/exportpdf/index.html
@@ -1,6 +1,6 @@
 <h1>The Export PDF Plugin</h2>
 <textarea class="exportpdf">
-  <p>The Export to PDF plugin provides lets you generate a PDF file directly from the editor.</p>
+  <p>The Export to PDF plugin lets you generate a PDF file directly from the editor.</p>
   <ul>
     <li>On the menu bar, open <strong>File</strong> &gt; <strong>Export</strong>.</li>
     <li>Click the <strong>PDF</strong> nested menu item button.</li>
