--- a/modules/ROOT/examples/live-demos/exportpdf/index.html
+++ b/modules/ROOT/examples/live-demos/exportpdf/index.html
@@ -2,7 +2,7 @@
 <textarea class="exportpdf">
   <p>The Export to PDF plugin lets you generate a PDF file directly from the editor.</p>
   <ul>
-    <li>On the menu bar, open <strong>File</strong> &gt; <strong>Export</strong>.</li>
-    <li>Click the <strong>PDF</strong> nested menu item button.</li>
+    <li>On the menu bar, open <strong>File</strong>.</li>
+    <li>Click the <strong>Export to PDF...</strong> menu item button.</li>
   </ul>
 </textarea>
