--- a/modules/ROOT/examples/live-demos/exportpdf/index.html
+++ b/modules/ROOT/examples/live-demos/exportpdf/index.html
@@ -1,4 +1,4 @@
-<h1>The Export PDF Plugin</h2>
+<h1>The Export to PDF Plugin</h2>
 <textarea class="exportpdf">
   <p>The Export to PDF plugin lets you generate a PDF file directly from the editor.</p>
   <ul>
