--- a/modules/ROOT/examples/live-demos/full-featured/index.html
+++ b/modules/ROOT/examples/live-demos/full-featured/index.html
@@ -56,7 +56,7 @@
 
 <h2>Note on the included Template demonstration</h2>
 
-<p>The included Template demonstration uses the <a class="mceNonEditable" href="{{site-url}}/tinymce/6/advanced-templates/#advtemplate_list"><code>advtemplate_list</code></a> configuration option to return a local promise containing a basic Template structure with self-contained examples.</p>
+<p>The included Templates demonstration uses the <a class="mceNonEditable" href="{{site-url}}/tinymce/6/advanced-templates/#advtemplate_list"><code>advtemplate_list</code></a> configuration option to return a local promise containing a basic Template structure with self-contained examples.</p>
 
 <p>This example allows for the loading of and interacting with the Template user-interface but cannot be used to create, edit, or save Template items.</p>
 
