--- a/modules/ROOT/examples/live-demos/full-featured/index.html
+++ b/modules/ROOT/examples/live-demos/full-featured/index.html
@@ -54,7 +54,7 @@
 	<li>30C is 86F</li>
 </ul>
 
-<h2>Note on the included Template demonstration</h2>
+<h2>Note on the included Templates demonstration</h2>
 
 <p>The included Templates demonstration uses the <a class="mceNonEditable" href="{{site-url}}/tinymce/6/advanced-templates/#advtemplate_list"><code>advtemplate_list</code></a> configuration option to return a local promise containing a basic Template structure with self-contained examples.</p>
 
