DOC-2300: Replace/rename Advanced Templates with Template in TinyMCE 7.0 docs. (#3120)
* DOC-2300: Replace/rename Advanced Templates with Template in TinyMCE 7x docs.

* Update modules/ROOT/pages/advanced-templates.adoc

* Update modules/ROOT/pages/advanced-templates.adoc

* Update modules/ROOT/nav.adoc

* Update modules/ROOT/partials/index-pages/premium-plugins.adoc

* Update modules/ROOT/pages/mergetags.adoc

* Update modules/ROOT/pages/mergetags.adoc

* Update modules/ROOT/pages/available-toolbar-buttons.adoc

* Update modules/ROOT/pages/advanced-templates.adoc

* DOC-2230: replace templates with productname in specific sections.

* Update modules/ROOT/pages/mergetags.adoc

Co-authored-by: ltrouton <46954949+ltrouton@users.noreply.github.com>

* Update modules/ROOT/partials/index-pages/premium-plugins.adoc

Co-authored-by: ltrouton <46954949+ltrouton@users.noreply.github.com>

* Update modules/ROOT/pages/mergetags.adoc

Co-authored-by: ltrouton <46954949+ltrouton@users.noreply.github.com>

* Update modules/ROOT/pages/advanced-templates.adoc

Co-authored-by: ltrouton <46954949+ltrouton@users.noreply.github.com>

* Update modules/ROOT/examples/live-demos/full-featured/index.html

Co-authored-by: ltrouton <46954949+ltrouton@users.noreply.github.com>

* Update modules/ROOT/pages/advanced-templates.adoc

Co-authored-by: ltrouton <46954949+ltrouton@users.noreply.github.com>

* Update modules/ROOT/examples/live-demos/full-featured/index.html

Co-authored-by: ltrouton <46954949+ltrouton@users.noreply.github.com>

---------

Co-authored-by: ltrouton <46954949+ltrouton@users.noreply.github.com>

--- a/modules/ROOT/examples/live-demos/full-featured/index.html
+++ b/modules/ROOT/examples/live-demos/full-featured/index.html
@@ -54,13 +54,13 @@
 	<li>30C is 86F</li>
 </ul>
 
-<h2>Note on the included Advanced Template demonstration</h2>
+<h2>Note on the included Templates demonstration</h2>
 
-<p>The included Advanced Template demonstration uses the <a class="mceNonEditable" href="{{site-url}}/tinymce/6/advanced-templates/#advtemplate_list"><code>advtemplate_list</code></a> configuration option to return a local promise containing a basic Template structure with self-contained examples.</p>
+<p>The included Templates demonstration uses the <a class="mceNonEditable" href="{{site-url}}/tinymce/6/advanced-templates/#advtemplate_list"><code>advtemplate_list</code></a> configuration option to return a local promise containing a basic Template structure with self-contained examples.</p>
 
-<p>This example allows for the loading of and interacting with the Advanced Template user-interface but cannot be used to create, edit, or save Template items.</p>
+<p>This example allows for the loading of and interacting with the Template user-interface but cannot be used to create, edit, or save Template items.</p>
 
-<p>See the <a class="mceNonEditable" href="{{site-url}}/tinymce/6/advanced-templates/">Advanced Templates</a> documentation for details on how to setup Advanced Templates to interact with external data sources.</p>
+<p>See the <a class="mceNonEditable" href="{{site-url}}/tinymce/6/advanced-templates/">Templates</a> documentation for details on how to setup Templates to interact with external data sources.</p>
 
 <h2>Found a bug?</h2>
 
