--- a/modules/ROOT/examples/live-demos/custom-shortcut-3/index.html
+++ b/modules/ROOT/examples/live-demos/custom-shortcut-3/index.html
@@ -2,7 +2,7 @@
   <p>Hover on the <em>plus</em> toolbar button to see the shortcut in its tooltip.</p>
   <p>To insert "@username":</p>
   <ul>
-    <li>Click the <em>plus</em> toolbar button and select <strong>Insert username</strong>.</li>
+    <li>Click the <em>plus</em> toolbar button.</li>
     <li>On macOS, use the keyboard shortcut: Command+Option+U.</li>
     <li>On Windows or Linux, use the keyboard shortcut: Ctrl+Alt+U.</li>
   </ul>
