DOC-2248: Update demos

--- a/modules/ROOT/examples/live-demos/revisionhistory/index.html
+++ b/modules/ROOT/examples/live-demos/revisionhistory/index.html
@@ -2,28 +2,46 @@
   {{logofordemoshtml}}
 
   <h1 style="text-align: center;">The Revision History plugin</h1>
-
   <p>This is a demo of the <strong>Revision History</strong> Premium plugin.</p>
-
   <h2>What is the Revision History plugin?</h2>
-
-  <p>The Revision History plugin allows you to track changes made to content in TinyMCE. It provides a simple way to view and restore previous versions of content.</p>
-
-  <h2>Got questions or need help?</h2>
-
+  <p>The Revision History plugin provides a simple way to view changes and restore saved versions of a document.</p>
+  <p>&nbsp;</p>
+  <h2>The world&rsquo;s first Rich Text Editor in the cloud</h2>
+  <div><em>Have you heard about Tiny Cloud? It&rsquo;s the first step in our journey to help you deliver fantastic content creation experiences, no matter your level of expertise. 50,000 developers already agree. They get free access to our global CDN, image proxy services and auto updates to the TinyMCE editor. They&rsquo;re also ready for some exciting updates coming soon.</em></div>
+  <h3>An editor for every project</h3>
+  <p>Here are some of our customer&rsquo;s most common use cases for TinyMCE:</p>
+  <ol>
+  <li>Content Management Systems (<em>e.g. WordPress, Umbraco</em>)</li>
+  <li><em>Customer Relationship Management and marketing automation</em>(<em>e.g. Marketo</em>)</li>
+  <li>Email marketing (<em>e.g. Constant Contact</em>)</li>
+  <li>Content creation in SaaS systems:
   <ul>
-    <li>Our <a href="{{site-url}}/tinymce/6/">documentation</a> is a great resource for learning how to configure TinyMCE.</li>
-    <li>Have a specific question? Try the <a href="{{communitysupporturl}}" target="_blank" rel="noopener"><code>{{prodnamecode}}</code> tag at Stack Overflow</a>.</li>
-    <li>We also offer enterprise grade support as part of <a href="{{pricingpage}}">TinyMCE premium plans</a>.</li>
+  <li><em>Eventbrite</em></li>
+  <li><em>Evernote</em></li>
+  <li><em>GoFundMe</em></li>
+  <li><em>Zendesk</em></li>
   </ul>
-
-  <h2>Found a bug?</h2>
-
-  <p>If you believe you have found a bug please create an issue on the <a href="https://github.com/tinymce/tinymce/issues">GitHub repo</a> to report it to the developers.</p>
-
-  <h2>Finally…</h2>
-
-  <p>Don’t forget to check out <a href="http://www.plupload.com" target="_blank">Plupload</a>, the upload solution featuring HTML5 upload support.</p>
-  <p>Thanks for supporting TinyMCE. We hope it helps you and your users create great content.</p>
-  <p>All the best from the TinyMCE team.</p>
+  </li>
+  </ol>
+  <table style="border-collapse: collapse; width: 100%;" border="1">
+  <thead>
+  <tr>
+  <th>Product</th>
+  <th>Cost</th>
+  <th>Really?</th>
+  </tr>
+  </thead>
+  <tbody>
+  <tr>
+  <td>TinyMCE</td>
+  <td>Free</td>
+  <td>YES!</td>
+  </tr>
+  <tr>
+  <td>Plupload</td>
+  <td>Free</td>
+  <td>YES!</td>
+  </tr>
+  </tbody>
+  </table>
 </textarea>
