DOC-2357: Update Markdown Premium Plugin demo with core basic plugins.

--- a/modules/ROOT/examples/live-demos/markdown/index.html
+++ b/modules/ROOT/examples/live-demos/markdown/index.html
@@ -8,7 +8,22 @@
     <tr>
       <td style="width: 50%;">
         <textarea class="markdown">
-          <p>The Markdown Premium plugin detects pure markdown from a paste event within a TinyMCE editor instance.</p>
+          <h1>Markdown Premium Plugin</h1>
+          <p>The <strong>Markdown Premium Plugin</strong> enhances the functionality of the editor by allowing it to detect and convert pure markdown content on-paste.</p>
+          <h2><strong>Tips for Pasting Text</strong></h2>
+          <p>To paste text in plain form using keyboard shortcuts, use:</p>
+          <ul>
+          <li><strong>Windows:</strong> Ctrl+Shift+V</li>
+          <li><strong>Mac:</strong> Cmd+Shift+V</li>
+          </ul>
+          <h3>Paste Example</h3>
+          <p>Paste the following markdown into the editor using the above shortcuts:</p>
+          <p># H1</p>
+          <p>## H2</p>
+          <p>### H3</p>
+          <p>#### H4</p>
+          <p>##### H5</p>
+          <p>###### H6</p>
         </textarea>
       </td>
     </tr>
