--- a/modules/ROOT/examples/live-demos/math/index.html
+++ b/modules/ROOT/examples/live-demos/math/index.html
@@ -1,5 +1,5 @@
 <textarea id="math_demo">
-  <p style="text-align: center;">The following equations are represented in the HTML source code as LaTex/MathML expressions.</p>
+  <p style="text-align: center;">The following equations are represented in the HTML source code as LaTeX/MathML expressions.</p>
 
   <div style="text-align: center;">
 	<h1>LaTex Example</h1>
