--- a/modules/ROOT/examples/live-demos/math/index.html
+++ b/modules/ROOT/examples/live-demos/math/index.html
@@ -2,9 +2,9 @@
   <p style="text-align: center;">The following equations are represented in the HTML source code as LaTeX/MathML expressions.</p>
 
   <div style="text-align: center;">
-	<h1>LaTex Example</h1>
+	<h1>LaTeX Example</h1>
 	<aside style="background-color: #f9f9f9; border-left: 5px solid #ccc; padding: 10px; margin: 10px 0; font-style: italic; color: #555;">
-	  The following example is a representation of a LaTex expression after it was inserted as a block element after selecting "Text above and below" from the text wrap toggle.
+	  The following example is a representation of a LaTeX expression after it was inserted as a block element after selecting "Text above and below" from the text wrap toggle.
 	</aside>
 	<tiny-math-block formula="\sum_{
 		  \begin{subarray}{l}
